modified and added images, fix layout issues

--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -1,9 +1,14 @@
 .bg-image {
-  background: url(/bghero6.jpg) no-repeat right center;
+  background: url(/bghero6b.jpg) no-repeat right center;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
   background-size: contain;
+}
+
+h2,
+h2 span {
+  letter-spacing: 0.01px;
 }
 
 nav {
